--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -15,7 +15,7 @@ nav {
 
 .nav-flex {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .nav-flex-1 {
@@ -40,8 +40,20 @@ nav {
   margin: auto;
 }
 
-@media all and (min-width: 800px) {
+@media all and (max-width: 600px) {
   .nav-flex {
-    flex-direction: row;
+    flex-direction: column;
+  }
+
+  .nav-flex-1-left {
+    text-align: center;
+  }
+
+  nav {
+    position: relative;
+    display: flex;
+    padding: 1rem;
+    background-color: #ffffff;
+    z-index: 10;
   }
 }
